--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=
      , initial-scale=2.0">
     <title>MundoFut</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <h1>aqui tera uma imagem</h1>   
