--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <h1>aqui tera uma imagem</h1>   
-
+    <header>
+    <h1>aqui tera uma imagem</h1> 
+    <ul>
+        <li>SafeSearch</li>
+        <li>Login</li>
+    </ul>
+    <header>
+        
 </body>
 </html>
