--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-     , initial-scale=2.0">
-    <title>MundoFut</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-    <h1>aqui tera uma imagem</h1> 
-    <ul>
-        <li>SafeSearch</li>
-        <li>Login</li>
-    </ul>
-    <header>
-        
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>
+    </header>
 </body>
 </html>
+
