--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="Formula-amico 1.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">SafeSearch</li>
+            <li class="cabecalho-lista-item">Login</li>
         </ul>
     </header>
 </body>
