--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<html lang="en">
+<html lang="pt-br">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="informações do futebol" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="Formula-amico 1.png" alt="logo da alura start">
@@ -14,6 +16,11 @@
             <li class="cabecalho-lista-item">Login</li>
         </ul>
     </header>
+    <section class="
+        <h2 class="titulo" >sobre o futebol</h2>
+        <p class="futebol-texto-um"></p>
+        <p class="futebol-texto-dois"></p>
+    </section>
 </body>
-</html>
 
+</html>
