--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     </header>
     <section class="
         <h2 class="titulo" >sobre o futebol</h2>
-        <p class="escola-Tranferências do Futebol 
-        Notícias e Memes
-        Jogos e Campeonatos em tempo real"></p>
+        <p class="escola-Tranferências do Futebol Notícias e Memes Jogos e Campeonatos em tempo real"></p>
         <p class="escola-E tudo sobre o mundo da bola"></p>
     </section>
 </body>
